--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,23 +1,22 @@
 server {
-    listen 80;　Nginx をポート 80 でリッスン（HTTPで動作）
-    index index.php index.html;　index.php と index.html を優先して表示
-    server_name localhost;　サーバー名を localhost に設定
-    error_log  /var/log/nginx/error.log;　エラーログの出力先を指定
-    access_log /var/log/nginx/access.log;　アクセスログの出力先を指定
+    listen 80;  # Nginx をポート 80 でリッスン（HTTPで動作）
+    index index.php index.html;  # index.php と index.html を優先して表示
+    server_name localhost;  # サーバー名を localhost に設定
+    error_log /var/log/nginx/error.log;  # エラーログの出力先を指定
+    access_log /var/log/nginx/access.log;  # アクセスログの出力先を指定
 
-    root /var/www/public;　ドキュメントルートを /var/www/public に設定
+    root /var/www/public;  # ドキュメントルートを /var/www/public に設定
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;  # GET パラメータが正確に渡るように設定
     }
-    #  GET パラメータが正確に渡るように設定
 
     location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;　PATH_INFO を分割して $_SERVER['PATH_INFO'] を利用可能にする
-        fastcgi_pass php:9000;　PHP-FPM に接続するためのソケットを指定
-        fastcgi_index index.php;  index.php を優先して表示
-        include fastcgi_params; fastcgi_params ファイルを読み込む
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;　スクリプトファイル名を設定
-        fastcgi_param PATH_INFO $fastcgi_path_info; PATH_INFO を設定
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;  # PATH_INFO を分割して $_SERVER['PATH_INFO'] を利用可能にする
+        fastcgi_pass php:9000;  # PHP-FPM に接続するためのソケットを指定
+        fastcgi_index index.php;  # index.php を優先して表示
+        include fastcgi_params;  # fastcgi_params ファイルを読み込む
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  # スクリプトファイル名を設定
+        fastcgi_param PATH_INFO $fastcgi_path_info;  # PATH_INFO を設定
     }
 }
